Fixed modals (#16)
* added modals and tidied the script up

* removed backspace

* fixed the data appending issue'

* fixed text overflowing on the modal

* fixed the modals

* modals look better now on and do not overflow

--- a/styles.css
+++ b/styles.css
@@ -19,21 +19,35 @@
 
 .modal {
   display: none;
-  width: 300px;
-  height: 300px;
+
+  width: 80%;
+  height: 80%;
+
   background: white;
   border-radius: 10px;
   box-shadow: 0px 0 15px -2px #666;
   padding: 1em;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 250px;
-  height: 250px;
-  margin-top: -125px;
-  margin-left: -125px;
+
+  position: fixed;
+
+  top: 40%;
+  left: 40%;
+  transform: translate(-40%, -40%);
+
+}
+
+.inside-restaurant-info {
+  padding: 1em;
+    overflow: auto;
 }
 
 .modal-open {
   display: block;
+}
+
+.close-modal {
+  background: linear-gradient(to right, 
+  red 20%, orange 20% 40%, yellow 40% 60%, green 60% 80%, blue 80%);
+  color: white;
+  padding: .5em;
 }
